--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.4",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.2.1",
